--- a/index.html
+++ b/index.html
@@ -3,98 +3,112 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ton Nom - Studio</title>
+<title>Nom de ton agence</title>
+
 <style>
-body {
+* {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #ffffff;
-    color: #111;
-    line-height: 1.6;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-header {
-    padding: 40px 20px;
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: bold;
-    letter-spacing: 2px;
-}
-
-section {
-    padding: 60px 20px;
-    max-width: 900px;
-    margin: auto;
-}
-
-h1, h2 {
-    font-weight: normal;
-}
-
-.hero {
-    text-align: center;
-    padding: 100px 20px;
-}
-
-.button {
-    display: inline-block;
-    margin-top: 20px;
-    padding: 12px 24px;
-    border: 1px solid #111;
-    text-decoration: none;
-    color: #111;
-    transition: 0.3s;
-}
-
-.button:hover {
-    background-color: #111;
+body {
+    font-family: Helvetica, Arial, sans-serif;
     color: white;
 }
 
-footer {
-    text-align: center;
-    padding: 40px;
-    font-size: 0.9rem;
-    color: #777;
+/* HEADER */
+
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 25px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 10;
 }
+
+.logo-left {
+    font-size: 0.9rem;
+    letter-spacing: 2px;
+}
+
+nav a {
+    margin-left: 30px;
+    text-decoration: none;
+    color: white;
+    font-size: 0.9rem;
+    letter-spacing: 1px;
+    transition: opacity 0.3s;
+}
+
+nav a:hover {
+    opacity: 0.6;
+}
+
+/* HERO */
+
+.hero {
+    height: 100vh;
+    background: url('https://images.unsplash.com/photo-1505691938895-1758d7feb511') center/cover no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+/* Overlay sombre */
+.hero::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.4);
+    top: 0;
+    left: 0;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+}
+
+.hero-content h1 {
+    font-size: 3rem;
+    letter-spacing: 5px;
+}
+
+/* Sections futures */
+
+section {
+    padding: 120px 50px;
+    color: black;
+    background: white;
+}
+
 </style>
 </head>
+
 <body>
 
 <header>
-TON NOM
+    <div class="logo-left">NOM COMPLET AGENCE</div>
+    <nav>
+        <a href="#apropos">À propos</a>
+        <a href="#projets">Projets</a>
+        <a href="#offre">Offre</a>
+        <a href="#contact">Contact</a>
+    </nav>
 </header>
 
-<section class="hero">
-<h1>Studio de design & architecture</h1>
-<p>Création d'espaces minimalistes et intemporels.</p>
-<a href="#contact" class="button">Me contacter</a>
-</section>
-
-<section>
-<h2>À propos</h2>
-<p>
-Décris ici ta vision, ton approche, ta philosophie de travail.
-</p>
-</section>
-
-<section>
-<h2>Services</h2>
-<p>
-• Conseil en aménagement<br>
-• Conception 3D<br>
-• Suivi de projet
-</p>
-</section>
-
-<section id="contact">
-<h2>Contact</h2>
-<p>Email : tonemail@email.com</p>
-</section>
-
-<footer>
-© 2026 TON NOM
-</footer>
+<div class="hero">
+    <div class="hero-content">
+        <h1>LOGO</h1>
+    </div>
+</div>
 
 </body>
 </html>
