--- a/index.html
+++ b/index.html
@@ -50,14 +50,12 @@ nav a:hover {
 
 /* HERO */
 
-.hero {
-    height: 100vh;
-    background: url('https://images.unsplash.com/photo-1505691938895-1758d7feb511') center/cover no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
+<div class="hero">
+    <div class="hero-content">
+        <img src="logo.png" alt="Logo agence" class="logo-center">
+    </div>
+</div>
+
 
 /* Overlay sombre */
 .hero::after {
