--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@ body {
 }
 
 /* HEADER */
-
 header {
     position: fixed;
     top: 0;
@@ -31,8 +30,15 @@ header {
 }
 
 .logo-left {
-    font-size: 0.9rem;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 0.8rem;
     letter-spacing: 2px;
+}
+
+.logo-small {
+    width: 30px;
 }
 
 nav a {
@@ -49,13 +55,14 @@ nav a:hover {
 }
 
 /* HERO */
-
-<div class="hero">
-    <div class="hero-content">
-        <img src="logo.png" alt="Logo agence" class="logo-center">
-    </div>
-</div>
-
+.hero {
+    height: 100vh;
+    background: url('https://images.unsplash.com/photo-1505691938895-1758d7feb511') center/cover no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
 
 /* Overlay sombre */
 .hero::after {
@@ -69,44 +76,3 @@ nav a:hover {
 }
 
 .hero-content {
-    position: relative;
-    z-index: 2;
-    text-align: center;
-}
-
-.hero-content h1 {
-    font-size: 3rem;
-    letter-spacing: 5px;
-}
-
-/* Sections futures */
-
-section {
-    padding: 120px 50px;
-    color: black;
-    background: white;
-}
-
-</style>
-</head>
-
-<body>
-
-<header>
-    <div class="logo-left">NOM COMPLET AGENCE</div>
-    <nav>
-        <a href="#apropos">À propos</a>
-        <a href="#projets">Projets</a>
-        <a href="#offre">Offre</a>
-        <a href="#contact">Contact</a>
-    </nav>
-</header>
-
-<div class="hero">
-    <div class="hero-content">
-        <h1>LOGO</h1>
-    </div>
-</div>
-
-</body>
-</html>
