--- a/index.html
+++ b/index.html
@@ -76,3 +76,66 @@ nav a:hover {
 }
 
 .hero-content {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+}
+
+.logo-center {
+    width: 250px;
+    max-width: 80%;
+}
+
+/* Sections futures */
+section {
+    padding: 120px 50px;
+    color: black;
+    background: white;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+    <div class="logo-left">
+        <img src="logo.png" alt="Logo" class="logo-small">
+        NOM COMPLET AGENCE
+    </div>
+    <nav>
+        <a href="#apropos">À propos</a>
+        <a href="#projets">Projets</a>
+        <a href="#offre">Offre</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
+
+<div class="hero">
+    <div class="hero-content">
+        <img src="logo.png" alt="Logo agence" class="logo-center">
+    </div>
+</div>
+
+<!-- Exemple sections -->
+<section id="apropos">
+    <h2>À propos</h2>
+    <p>Ton texte ici...</p>
+</section>
+
+<section id="projets">
+    <h2>Projets</h2>
+    <p>Ton texte ici...</p>
+</section>
+
+<section id="offre">
+    <h2>Offre</h2>
+    <p>Ton texte ici...</p>
+</section>
+
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Ton texte ici...</p>
+</section>
+
+</body>
+</html>
