--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nom de ton agence</title>
+  <title>Lp Studio</title>
 
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -106,7 +106,7 @@
 
   <header>
     <div class="logo-left">
-      <img src="logo.png" alt="Logo" class="logo-small">
+      <img src="Logo.png" alt="Logo" class="logo-small">
       NOM COMPLET AGENCE
     </div>
 
@@ -121,7 +121,7 @@
   <main>
     <div class="hero">
       <div class="hero-content">
-        <img src="logo.png" alt="Logo agence" class="logo-center">
+        <img src="Logo.png" alt="Logo agence" class="logo-center">
       </div>
     </div>
   </main>
