--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ section h2 {
 
 <header>
     <div class="logo-left">
-        <img src="Logo.png" alt="Logo LpStudio" class="logo-small">
+        <img src="logo(2).png" alt="Logo LpStudio" class="logo-small">
         LpStudio
     </div>
 
@@ -126,7 +126,7 @@ section h2 {
 <main>
     <div class="hero">
         <div class="hero-content">
-            <img src="Logo.png" alt="Logo LpStudio" class="logo-center">
+            <img src="logo(2).png" alt="Logo LpStudio" class="logo-center">
         </div>
     </div>
 
