--- a/index.html
+++ b/index.html
@@ -1,155 +1,170 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LpStudio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LpStudio</title>
 
-<style>
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
-body {
-    font-family: Helvetica, Arial, sans-serif;
-    background: #111; /* sécurité anti page blanche */
-    color: #fff;
-}
+    body {
+      font-family: Helvetica, Arial, sans-serif;
+      background: #111; /* fallback si image ne charge pas */
+      color: #fff;
+    }
 
-/* HEADER */
-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 25px 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 10;
-}
+    /* HEADER */
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      padding: 22px 50px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 10;
+    }
 
-.logo-left {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 0.85rem;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-}
+    .logo-left {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 0.85rem;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
 
-.logo-small {
-    width: 30px;
-    height: auto;
-}
+    .logo-small {
+      width: 30px;
+      height: auto;
+      display: block;
+    }
 
-nav a {
-    margin-left: 30px;
-    text-decoration: none;
-    color: #fff;
-    font-size: 0.85rem;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    transition: opacity 0.3s;
-}
+    nav a {
+      margin-left: 26px;
+      text-decoration: none;
+      color: #fff;
+      font-size: 0.85rem;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      opacity: 0.9;
+      transition: opacity 0.2s ease;
+    }
 
-nav a:hover {
-    opacity: 0.6;
-}
+    nav a:hover { opacity: 0.6; }
 
-/* HERO */
-.hero {
-    height: 100vh;
-    background-color: #111;
-    background-image: url('fond.png');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
+    /* HERO */
+    .hero {
+      height: 100vh;
+      background-color: #111;
+      background-image: url('fond.png');
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
 
-/* Overlay sombre */
-.hero::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: rgba(0,0,0,0.45);
-}
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      padding: 0 20px;
+    }
 
-.hero-content {
-    position: relative;
-    z-index: 2;
-    text-align: center;
-}
+    /* Overlay sombre pour lisibilité du logo */
+    .hero::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.30);
+    }
 
-.logo-center {
-    width: 260px;
-    max-width: 80vw;
-    height: auto;
-}
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+    }
 
-/* Sections */
-section {
-    padding: 120px 50px;
-    background: #fff;
-    color: #111;
-}
+    .logo-center {
+      width: 260px;
+      max-width: 80vw;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
 
-section h2 {
-    margin-bottom: 20px;
-    font-weight: 400;
-}
+    /* SECTIONS */
+    section {
+      padding: 120px 50px;
+      background: #fff;
+      color: #111;
+    }
 
-</style>
+    section h2 {
+      margin-bottom: 18px;
+      font-weight: 400;
+      letter-spacing: 1px;
+    }
+
+    section p {
+      max-width: 820px;
+      line-height: 1.7;
+      opacity: 0.9;
+    }
+
+    /* Responsive */
+    @media (max-width: 760px) {
+      header { padding: 18px 20px; }
+      nav a { margin-left: 14px; font-size: 0.75rem; }
+      .logo-left { font-size: 0.75rem; }
+      .logo-center { width: 210px; }
+      section { padding: 90px 20px; }
+    }
+  </style>
 </head>
 
 <body>
 
-<header>
+  <header>
     <div class="logo-left">
-        <img src="logo(2).png" alt="Logo LpStudio" class="logo-small">
-        LpStudio
+      <img src="logo(2).png" alt="Logo LpStudio" class="logo-small" />
+      LpStudio
     </div>
 
     <nav>
-        <a href="#apropos">À propos</a>
-        <a href="#projets">Projets</a>
-        <a href="#offre">Offre</a>
-        <a href="#contact">Contact</a>
+      <a href="#apropos">À propos</a>
+      <a href="#projets">Projets</a>
+      <a href="#offre">Offre</a>
+      <a href="#contact">Contact</a>
     </nav>
-</header>
+  </header>
 
-<main>
+  <main>
     <div class="hero">
-        <div class="hero-content">
-            <img src="logo(2).png" alt="Logo LpStudio" class="logo-center">
-        </div>
+      <div class="hero-content">
+        <img src="logo(2).png" alt="Logo LpStudio" class="logo-center" />
+      </div>
     </div>
 
     <section id="apropos">
-        <h2>À propos</h2>
-        <p>Présentation de LpStudio...</p>
+      <h2>À propos</h2>
+      <p>Présentation de LpStudio…</p>
     </section>
 
     <section id="projets">
-        <h2>Projets</h2>
-        <p>Projets à venir...</p>
+      <h2>Projets</h2>
+      <p>Projets à venir…</p>
     </section>
 
     <section id="offre">
-        <h2>Offre</h2>
-        <p>Détail des prestations...</p>
+      <h2>Offre</h2>
+      <p>Détail des prestations…</p>
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
-        <p>Email : contact@lpstudio.fr</p>
+      <h2>Contact</h2>
+      <p>Email : contact@lpstudio.fr</p>
     </section>
-</main>
+  </main>
 
 </body>
 </html>
