--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <header>
     <div class="logo-left">
-      <img src="logo(2).png" alt="Logo LpStudio" class="logo-small" />
+      <img src="logo.png" alt="Logo LpStudio" class="logo-small" />
       LpStudio
     </div>
 
@@ -141,7 +141,7 @@
   <main>
     <div class="hero">
       <div class="hero-content">
-        <img src="logo(2).png" alt="Logo LpStudio" class="logo-center" />
+        <img src="logo.png" alt="Logo LpStudio" class="logo-center" />
       </div>
     </div>
 
