--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
+    :root{
+      --warm-white: #f6f1e8;   /* blanc cassé */
+      --text-warm:  #f3eadf;   /* texte blanc cassé sur fond hero */
+      --text-dark:  #1a1a1a;
+    }
+
     body {
       font-family: Helvetica, Arial, sans-serif;
-      background: #111; /* fallback si image ne charge pas */
+      background: #111;
       color: #fff;
     }
 
@@ -26,13 +32,15 @@
       z-index: 10;
     }
 
-    .logo-left {
+    .brand {
       display: flex;
       align-items: center;
       gap: 10px;
-      font-size: 0.85rem;
-      letter-spacing: 2px;
+      text-decoration: none; /* lien vers accueil */
+      color: var(--text-warm);
       text-transform: uppercase;
+      letter-spacing: 2px;
+      font-size: 0.85rem;
     }
 
     .logo-small {
@@ -44,15 +52,14 @@
     nav a {
       margin-left: 26px;
       text-decoration: none;
-      color: #fff;
+      color: var(--text-warm); /* blanc cassé */
       font-size: 0.85rem;
       letter-spacing: 1px;
       text-transform: uppercase;
-      opacity: 0.9;
+      opacity: 0.95;
       transition: opacity 0.2s ease;
     }
-
-    nav a:hover { opacity: 0.6; }
+    nav a:hover { opacity: 0.65; }
 
     /* HERO */
     .hero {
@@ -68,14 +75,14 @@
       align-items: center;
       position: relative;
       padding: 0 20px;
+      overflow: hidden;
     }
 
-    /* Overlay sombre pour lisibilité du logo */
     .hero::after {
       content: "";
       position: absolute;
       inset: 0;
-      background: rgba(0,0,0,0.30);
+      background: rgba(0,0,0,0.28); /* overlay un peu plus léger */
     }
 
     .hero-content {
@@ -92,49 +99,32 @@
       margin: 0 auto;
     }
 
-    /* SECTIONS */
-    section {
-      padding: 120px 50px;
-      background: #fff;
-      color: #111;
-    }
-
-    section h2 {
-      margin-bottom: 18px;
-      font-weight: 400;
-      letter-spacing: 1px;
-    }
-
-    section p {
-      max-width: 820px;
-      line-height: 1.7;
-      opacity: 0.9;
-    }
+    /* Empêche le scroll sur l'accueil */
+    html, body { height: 100%; }
+    body { overflow: hidden; }
 
     /* Responsive */
     @media (max-width: 760px) {
       header { padding: 18px 20px; }
       nav a { margin-left: 14px; font-size: 0.75rem; }
-      .logo-left { font-size: 0.75rem; }
+      .brand { font-size: 0.75rem; }
       .logo-center { width: 210px; }
-      section { padding: 90px 20px; }
     }
   </style>
 </head>
 
 <body>
-
   <header>
-    <div class="logo-left">
+    <a class="brand" href="index.html">
       <img src="logos.png" alt="Logo LpStudio" class="logo-small" />
       LpStudio
-    </div>
+    </a>
 
     <nav>
-      <a href="#apropos">À propos</a>
-      <a href="#projets">Projets</a>
-      <a href="#offre">Offre</a>
-      <a href="#contact">Contact</a>
+      <a href="apropos.html">À propos</a>
+      <a href="projets.html">Projets</a>
+      <a href="offre.html">Offre</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
@@ -144,27 +134,6 @@
         <img src="logos.png" alt="Logo LpStudio" class="logo-center" />
       </div>
     </div>
-
-    <section id="apropos">
-      <h2>À propos</h2>
-      <p>Présentation de LpStudio…</p>
-    </section>
-
-    <section id="projets">
-      <h2>Projets</h2>
-      <p>Projets à venir…</p>
-    </section>
-
-    <section id="offre">
-      <h2>Offre</h2>
-      <p>Détail des prestations…</p>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email : contact@lpstudio.fr</p>
-    </section>
   </main>
-
 </body>
 </html>
