--- a/apropos.html
+++ b/apropos.html
@@ -109,8 +109,16 @@
   <main>
     <h1>À propos</h1>
     <p>
-      Écris ici ta présentation : ta vision, ton approche, ton style (mid-century chaleureux, lignes épurées, matières…),
-      et ce que tu apportes concrètement aux clients.
+     Je m’appelle Précilia, fondatrice de LpStudio et diplômée d’un Master en architecture d’intérieur à Paris.
+Après plusieurs années d’expérience en agence, j’ai choisi de créer mon propre studio afin de proposer une approche plus personnelle, attentive et sur mesure.
+
+Mon travail repose sur l’écoute. Chaque projet commence par une compréhension fine de vos habitudes, de vos envies et de votre manière de vivre les espaces. Mon rôle n’est pas d’imposer un style, mais de révéler le vôtre.
+
+Je conçois des intérieurs à la fois esthétiques, fonctionnels et durables. Du mid-century au japandi, du moderne minimal au cocooning chaleureux, je m’adapte à chaque univers avec exigence et cohérence architecturale.
+
+J’accompagne mes clients dans la conception complète de leurs espaces : réorganisation des volumes, optimisation des circulations, choix des matériaux, palettes, mobiliers et ambiances. Je propose également des prestations de home staging pour valoriser un bien avant sa mise en vente.
+
+Pour moi, un projet réussi est un projet qui vous ressemble, où chaque détail trouve sa place avec justesse.
     </p>
   </main>
 </body>
