--- a/projets.html
+++ b/projets.html
@@ -156,7 +156,7 @@ h1{
 
     <a href="projet1.html" class="project">
       <img src="projet1.jpg">
-      <div class="project-title">Projet 01</div>
+      <div class="project-title">Salle de bain épurée</div>
     </a>
 
     <a href="projet2.html" class="project">
