--- a/projet1.html
+++ b/projet1.html
@@ -178,19 +178,24 @@ h1{
   <!-- DESCRIPTION -->
   <div class="desc">
     <p>
-      Description du projet : contexte, attentes du client, contraintes,
-      ambiance recherchée, palette choisie, matériaux…
+      Description du projet : cette rénovation avait pour objectif de transformer une salle de bain vieillisante, marquée par des teintes orangées 
+      et une baignoire encombrante, en une salle d'eau contemporaine, lumineuse et fonctionelle.
     </p>
 
     <p>
-      Explique ton approche, la transformation apportée,
-      l’optimisation des volumes et la cohérence esthétique.
+     L’espace a été entièrement repensé afin d’optimiser les volumes et les circulations. 
+      La baignoire a laissé place à une grande douche, apportant davantage de légèreté visuelle et de confort d’usage au quotidien. 
+      L’intégration d’une double vasque permet une utilisation simultanée plus pratique, répondant aux besoins actuels des occupants.
+      Le parti pris esthétique s’est orienté vers des tonalités plus sobres et modernes, favorisant une atmosphère apaisante et intemporelle. Le choix de matériaux clairs et de lignes épurées contribue à renforcer la luminosité naturelle de la pièce et à créer une sensation d’espace élargi.
+
+      L’enjeu principal était de concevoir une salle d’eau à la fois élégante et durable, où fonctionnalité et harmonie visuelle se répondent avec justesse, 
+      pour un espace quotidien plus fluide et agréable à vivre.
     </p>
 
     <div class="meta">
       <div><strong>Type :</strong> Rénovation intérieure</div>
-      <div><strong>Surface :</strong> XX m²</div>
-      <div><strong>Style :</strong> Mid-century chaleureux</div>
+      <div><strong>Surface :</strong> 4.2 m²</div>
+      <div><strong>Style :</strong> Moderne</div>
     </div>
   </div>
 
@@ -201,12 +206,12 @@ h1{
 
   <div class="card">
     <img src="projet1-avant.jpg" alt="Avant travaux">
-    <div class="label">Avant travaux</div>
+    <div class="label">projet1avant.jpg</div>
   </div>
 
   <div class="card">
     <img src="projet1-apres.jpg" alt="Après travaux">
-    <div class="label">Après travaux</div>
+    <div class="label">projet1.jpg</div>
   </div>
 
 </div>
