--- a/projet1.html
+++ b/projet1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Salle de bain épurée — LpStudio</title>
+<title>Salle d’eau épurée — LpStudio</title>
 
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -81,21 +81,19 @@ h1{
 /* LAYOUT portrait */
 .top-layout{
   display: grid;
-  grid-template-columns: 0.8fr 1.2fr; /* image plus fine */
+  grid-template-columns: 0.8fr 1.2fr;
   gap: 60px;
   align-items: start;
   margin-bottom: 70px;
 }
 
-/* IMAGE PRINCIPALE PORTRAIT */
 .main-visual{
   width: 100%;
-  height: auto;   /* IMPORTANT */
+  height: auto;
   display: block;
   border-radius: 6px;
 }
 
-/* DESCRIPTION */
 .desc p{
   line-height: 1.75;
   color: var(--muted);
@@ -121,7 +119,7 @@ h1{
 
 .card img{
   width: 100%;
-  height: auto;   /* plus de coupe */
+  height: auto;
   border-radius: 6px;
   display: block;
 }
@@ -168,28 +166,25 @@ h1{
 </header>
 
 <main>
-<h1>Projet 01</h1>
+<h1>Salle d’eau épurée</h1>
 
 <div class="top-layout">
 
   <!-- IMAGE PRINCIPALE -->
-  <img src="projet1.jpg" alt="Projet 01" class="main-visual">
+  <img src="projet1.jpg" alt="Salle d’eau après rénovation" class="main-visual">
 
   <!-- DESCRIPTION -->
   <div class="desc">
     <p>
-      Description du projet : cette rénovation avait pour objectif de transformer une salle de bain vieillisante, marquée par des teintes orangées 
-      et une baignoire encombrante, en une salle d'eau contemporaine, lumineuse et fonctionelle.
+      Cette rénovation avait pour objectif de transformer une salle de bain vieillissante, marquée par des teintes orangées 
+      et une baignoire encombrante, en une salle d’eau contemporaine, lumineuse et fonctionnelle.
     </p>
 
     <p>
-     L’espace a été entièrement repensé afin d’optimiser les volumes et les circulations. 
+      L’espace a été entièrement repensé afin d’optimiser les volumes et les circulations. 
       La baignoire a laissé place à une grande douche, apportant davantage de légèreté visuelle et de confort d’usage au quotidien. 
       L’intégration d’une double vasque permet une utilisation simultanée plus pratique, répondant aux besoins actuels des occupants.
-      Le parti pris esthétique s’est orienté vers des tonalités plus sobres et modernes, favorisant une atmosphère apaisante et intemporelle. Le choix de matériaux clairs et de lignes épurées contribue à renforcer la luminosité naturelle de la pièce et à créer une sensation d’espace élargi.
-
-      L’enjeu principal était de concevoir une salle d’eau à la fois élégante et durable, où fonctionnalité et harmonie visuelle se répondent avec justesse, 
-      pour un espace quotidien plus fluide et agréable à vivre.
+      Le choix de matériaux sobres et de lignes épurées renforce la luminosité naturelle de la pièce et crée une atmosphère apaisante et intemporelle.
     </p>
 
     <div class="meta">
@@ -205,13 +200,13 @@ h1{
 <div class="before-after">
 
   <div class="card">
-    <img src="projet1-avant.jpg" alt="Avant travaux">
-    <div class="label">projet1avant.jpg</div>
+    <img src="projet1avant.jpg" alt="Salle de bain avant travaux">
+    <div class="label">Avant travaux</div>
   </div>
 
   <div class="card">
-    <img src="projet1-apres.jpg" alt="Après travaux">
-    <div class="label">projet1.jpg</div>
+    <img src="projet1.jpg" alt="Salle d’eau après travaux">
+    <div class="label">Après travaux</div>
   </div>
 
 </div>
