--- a/projet3.html
+++ b/projet3.html
@@ -231,7 +231,7 @@ h1{
 
 <!-- PLAN -->
 <div class="plan-section">
-  <img src="planprojet.jpg" alt="Plan du projet">
+  <img src="planprojet3.jpg" alt="Plan du projet">
 </div>
 
 <!-- EXISTANT -->
