--- a/projet3.html
+++ b/projet3.html
@@ -238,9 +238,9 @@ h1{
 <div class="existant">
   <h2>Lieux existants</h2>
   <div class="existant-grid">
-    <img src="int1.jpg" alt="">
-    <img src="int2.jpg" alt="">
-    <img src="int3.jpg" alt="">
+    <img src="int1.jpeg" alt="">
+    <img src="int2.jpeg" alt="">
+    <img src="int3.jpeg" alt="">
   </div>
 </div>
 
