--- a/projets.html
+++ b/projets.html
@@ -165,8 +165,8 @@ h1{
     </a>
 
     <a href="projet3.html" class="project">
-      <img src="projet3.jpg">
-      <div class="project-title">Projet 03</div>
+      <img src="chambre.jpg">
+      <div class="project-title">Rénovation d'une longère</div>
     </a>
 
     <a href="projet4.html" class="project">
