--- a/projets.html
+++ b/projets.html
@@ -165,7 +165,7 @@ h1{
     </a>
 
     <a href="projet3.html" class="project">
-      <img src="chambre.jpg">
+      <img src="sam3.jpg">
       <div class="project-title">Rénovation d'une longère</div>
     </a>
 
