--- a/projet3.html
+++ b/projet3.html
@@ -225,7 +225,7 @@ h1{
   </div>
 
   <!-- IMAGE PRINCIPALE DROITE -->
-  <img src="chambre.jpg" alt="Perspective principale" class="main-visual">
+  <img src="sam3.jpg" alt="Perspective principale" class="main-visual">
 
 </div>
 
